--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1013,11 +1013,11 @@
     "plt.ylim(0, 100)\n",
     "plt.xlim(-60, 80)\n",
     "\n",
-    "#display the plot\n",
-    "plt.show()\n",
-    "\n",
     "#save image\n",
-    "plt.savefig(\"Images/lat_temp.png\")"
+    "plt.savefig(\"Images/lat_temp.png\")\n",
+    "\n",
+    "#display the plot\n",
+    "plt.show()"
    ]
   },
   {
@@ -1067,11 +1067,11 @@
     "plt.ylim(0, 100)\n",
     "plt.xlim(-60, 80)\n",
     "\n",
-    "#display the plot\n",
-    "plt.show()\n",
-    "\n",
     "#save image\n",
-    "plt.savefig(\"Images/lat_humidity.png\")"
+    "plt.savefig(\"Images/lat_humidity.png\")\n",
+    "\n",
+    "#display the plot\n",
+    "plt.show()"
    ]
   },
   {
@@ -1121,11 +1121,11 @@
     "plt.ylim(-5, 100)\n",
     "plt.xlim(-60, 80)\n",
     "\n",
-    "#display the plot\n",
-    "plt.show()\n",
-    "\n",
     "#save image\n",
-    "plt.savefig(\"Images/lat_cloudiness.png\")"
+    "plt.savefig(\"Images/lat_cloudiness.png\")\n",
+    "\n",
+    "#display the plot\n",
+    "plt.show()"
    ]
   },
   {
@@ -1176,9 +1176,6 @@
     "#axes limits\n",
     "plt.ylim(0, 40)\n",
     "plt.xlim(-60, 80)\n",
-    "\n",
-    "#display the plot\n",
-    "plt.show()\n",
     "\n",
     "#save image\n",
     "plt.savefig(\"Images/lat_windspeed.png\")"
@@ -1643,7 +1640,7 @@
     "\n",
     "#annotation and labels\n",
     "plt.annotate(line_eq,(-55, 47),fontsize=12,color=\"red\")\n",
-    "plt.title(\"Souther Hemisphere Latitude vs. Cloudiness\")\n",
+    "plt.title(\"Southern Hemisphere Latitude vs. Cloudiness\")\n",
     "plt.xlabel (\"Southern Hemisphere Latitude\")\n",
     "plt.ylabel (\"Cloudines (%)\")\n",
     "\n",
