--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +42,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nanchang</td>\n",
+       "      <td>28.6833</td>\n",
+       "      <td>115.8833</td>\n",
+       "      <td>69.40</td>\n",
+       "      <td>55</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.23</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>1635133027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kapaa</td>\n",
+       "      <td>22.0752</td>\n",
+       "      <td>-159.3190</td>\n",
+       "      <td>85.98</td>\n",
+       "      <td>85</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1635133027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Port Elizabeth</td>\n",
+       "      <td>-33.9180</td>\n",
+       "      <td>25.5701</td>\n",
+       "      <td>52.09</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.75</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1635133028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Atuona</td>\n",
+       "      <td>-9.8000</td>\n",
+       "      <td>-139.0333</td>\n",
+       "      <td>78.26</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18.48</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>1635133028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Fort Collins</td>\n",
+       "      <td>40.5853</td>\n",
+       "      <td>-105.0844</td>\n",
+       "      <td>55.08</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1635132783</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0        Nanchang  28.6833  115.8833     69.40        55           7   \n",
+       "1           Kapaa  22.0752 -159.3190     85.98        85          40   \n",
+       "2  Port Elizabeth -33.9180   25.5701     52.09        93           0   \n",
+       "3          Atuona  -9.8000 -139.0333     78.26        71           5   \n",
+       "4    Fort Collins  40.5853 -105.0844     55.08        43           1   \n",
+       "\n",
+       "   Wind Speed Country        Date  \n",
+       "0        7.23      CN  1635133027  \n",
+       "1        3.00      US  1635133027  \n",
+       "2        5.75      ZA  1635133028  \n",
+       "3       18.48      PF  1635133028  \n",
+       "4        1.01      US  1635132783  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#read the weather data into a dataframe\n",
     "city_weather = pd.read_csv(\"Output_Data/city_weather.csv\")\n",
@@ -65,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +193,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f36c24bdeae34efc8d394f70317fc336",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#heatmap of the humidity\n",
     "locations = city_weather[[\"Lat\", \"Lng\"]]\n",
@@ -103,9 +236,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>Port Augusta</td>\n",
+       "      <td>-32.5000</td>\n",
+       "      <td>137.7667</td>\n",
+       "      <td>76.71</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1635133072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>Saint-Pierre</td>\n",
+       "      <td>-21.3393</td>\n",
+       "      <td>55.4781</td>\n",
+       "      <td>76.57</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>RE</td>\n",
+       "      <td>1635133091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>Salalah</td>\n",
+       "      <td>17.0151</td>\n",
+       "      <td>54.0924</td>\n",
+       "      <td>73.49</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.75</td>\n",
+       "      <td>OM</td>\n",
+       "      <td>1635133092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>Arlit</td>\n",
+       "      <td>18.7369</td>\n",
+       "      <td>7.3853</td>\n",
+       "      <td>78.12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>1635133137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>Doha</td>\n",
+       "      <td>25.2867</td>\n",
+       "      <td>51.5333</td>\n",
+       "      <td>78.78</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>QA</td>\n",
+       "      <td>1635132930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>Dezful</td>\n",
+       "      <td>32.3811</td>\n",
+       "      <td>48.4058</td>\n",
+       "      <td>72.30</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.77</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>1635133172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "129  Port Augusta -32.5000  137.7667     76.71        15           0   \n",
+       "181  Saint-Pierre -21.3393   55.4781     76.57        72           0   \n",
+       "185       Salalah  17.0151   54.0924     73.49        60           0   \n",
+       "301         Arlit  18.7369    7.3853     78.12        14           0   \n",
+       "364          Doha  25.2867   51.5333     78.78        84           0   \n",
+       "398        Dezful  32.3811   48.4058     72.30        23           0   \n",
+       "\n",
+       "     Wind Speed Country        Date  \n",
+       "129        4.56      AU  1635133072  \n",
+       "181        3.44      RE  1635133091  \n",
+       "185        5.75      OM  1635133092  \n",
+       "301        1.54      NE  1635133137  \n",
+       "364        1.14      QA  1635132930  \n",
+       "398        1.77      IR  1635133172  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ideal_weather = city_weather.loc[\n",
     "    (city_weather[\"Max Temp\"] > 70) & (city_weather[\"Max Temp\"] < 80) & \\\n",
@@ -131,9 +396,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-6-dece8eac0e2e>:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  hotel_df[\"Hotel Name\"] = \"\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>Port Augusta</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>-32.5000</td>\n",
+       "      <td>137.7667</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>Saint-Pierre</td>\n",
+       "      <td>RE</td>\n",
+       "      <td>-21.3393</td>\n",
+       "      <td>55.4781</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>Salalah</td>\n",
+       "      <td>OM</td>\n",
+       "      <td>17.0151</td>\n",
+       "      <td>54.0924</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>Arlit</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>18.7369</td>\n",
+       "      <td>7.3853</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>Doha</td>\n",
+       "      <td>QA</td>\n",
+       "      <td>25.2867</td>\n",
+       "      <td>51.5333</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>Dezful</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>32.3811</td>\n",
+       "      <td>48.4058</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City Country      Lat       Lng Hotel Name\n",
+       "129  Port Augusta      AU -32.5000  137.7667           \n",
+       "181  Saint-Pierre      RE -21.3393   55.4781           \n",
+       "185       Salalah      OM  17.0151   54.0924           \n",
+       "301         Arlit      NE  18.7369    7.3853           \n",
+       "364          Doha      QA  25.2867   51.5333           \n",
+       "398        Dezful      IR  32.3811   48.4058           "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#create hotel dataframe\n",
     "hotel_df = ideal_weather[[\"City\", \"Country\", \"Lat\", \"Lng\"]]\n",
@@ -147,9 +520,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1720: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(loc, value, pi)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>Port Augusta</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>-32.5000</td>\n",
+       "      <td>137.7667</td>\n",
+       "      <td>Majestic Oasis Apartments</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>Saint-Pierre</td>\n",
+       "      <td>RE</td>\n",
+       "      <td>-21.3393</td>\n",
+       "      <td>55.4781</td>\n",
+       "      <td>Lindsey Hôtel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>Salalah</td>\n",
+       "      <td>OM</td>\n",
+       "      <td>17.0151</td>\n",
+       "      <td>54.0924</td>\n",
+       "      <td>HAMDAN PLAZA HOTEL SALALAH, an HTG Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>Arlit</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>18.7369</td>\n",
+       "      <td>7.3853</td>\n",
+       "      <td>Case de Passage De la Prefecture</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>Doha</td>\n",
+       "      <td>QA</td>\n",
+       "      <td>25.2867</td>\n",
+       "      <td>51.5333</td>\n",
+       "      <td>Movenpick Hotel Doha</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>Dezful</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>32.3811</td>\n",
+       "      <td>48.4058</td>\n",
+       "      <td>سالن پیرایش امید</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City Country      Lat       Lng  \\\n",
+       "129  Port Augusta      AU -32.5000  137.7667   \n",
+       "181  Saint-Pierre      RE -21.3393   55.4781   \n",
+       "185       Salalah      OM  17.0151   54.0924   \n",
+       "301         Arlit      NE  18.7369    7.3853   \n",
+       "364          Doha      QA  25.2867   51.5333   \n",
+       "398        Dezful      IR  32.3811   48.4058   \n",
+       "\n",
+       "                                   Hotel Name  \n",
+       "129                 Majestic Oasis Apartments  \n",
+       "181                             Lindsey Hôtel  \n",
+       "185  HAMDAN PLAZA HOTEL SALALAH, an HTG Hotel  \n",
+       "301          Case de Passage De la Prefecture  \n",
+       "364                      Movenpick Hotel Doha  \n",
+       "398                          سالن پیرایش امید  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#set the parameters to search for hotel\n",
     "params = {\n",
@@ -184,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,9 +695,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f36c24bdeae34efc8d394f70317fc336",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
